[package]
name = "ali-bastion"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
aes = "0.8"
cbc = "0.1"
rand = "0.8"
base64 = "0.21"
crossterm = "0.27"

[dev-dependencies]
tempfile = "3.0"
